improved : reset the base font-size at location level. Ensure a consistent size in em for child nodes. Break the inheritance from the theme rules.

--- a/assets/front/scss/sek-base.scss
+++ b/assets/front/scss/sek-base.scss
@@ -18,6 +18,7 @@
 /* make sure that the location level occupies 100% of the width */
 [data-sek-level="location"] {
   clear: both;
+  font-size: 16px;//reset the base font-size. we can't use 1rem there because too far from the <html> tag, the base font has already been defined by the theme.
 }
 
 /* To make vertical alignment possible in sections */
